# agent-workspace

./: .env.example  .gitignore  .gitleaksignore  AGENTS.md  API_REFERENCE.md  CLAUDE.md  CLAUDE_PERMISSIONS.md  CODEBASE_DOCUMENTATION.md  COMMANDER_CLAUDE.md  COMPLETE_IMPLEMENTATION.md  CONTRIBUTING.md  COWORKER_SETUP.md  COWORKER_SETUP_GUIDE.md  DIFF_VIEWER_FEATURES.md  DOCUMENTATION.md  Dockerfile.dev  FINAL_PLAN.md  GAP_ANALYSIS_2026-01-17.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_ROADMAP.md  INSTALL_DIFF_VIEWER.md  KNOWN_ISSUES.md  LICENSE  LINTING.md  LOGGING.md  OPEN_SOURCE_READINESS_REPORT_2026-02-22.md  OPEN_SOURCE_SECURITY_REVIEW_2026-02-18.md  POST_REWRITE_LOCAL_RECOVERY_2026-02-22.md  PR_CLEANUP_PLAN.md  PR_SUMMARY.md  PUBLIC_RELEASE_AUDIT_2026-02-04.md  PUBLIC_RELEASE_AUDIT_2026-02-05.md  QUICK_START.md  QUICK_START_SUMMARY.md  README.md  REVISED_WORKSPACE_PLAN.md  SECURITY.md  SETUP_INSTRUCTIONS.md  (+29 more)
.claude/: settings.json
.github/: FUNDING.yml
REVIEWS/: 2026-03-06-anrokx-open-prs.md
client/: activity-feed.js  agent-modal.js  app-new.js  app.js  commander-panel.js  context-telemetry.js  conversation-browser.js  dashboard.js  dev-server.js  file-watcher-adapter.js  greenfield-framework-modal.js  greenfield-wizard.js  icon-fixes.css  index-new.html  index.html  logger.js  notifications.js  plugin-host.js  plugins-admin.js  projects-board.js  queue-evidence.js  queue-workflow.js  quick-links.js  recommendations.js  simple.html  styles-new.css  styles.css  tauri-compat.js  terminal-adapter.js  terminal-manager.js  terminal.js  test-open.js  test.html  visibility-preset.js  voice-control.js  workspace-switcher.js  workspace-tab-manager.js  workspace-wizard.js
config/: custom-agents.example.json  project-types.json  review-workflows.json
diff-viewer/: .env.example  ADVANCED_FEATURES_IMPLEMENTED.md  BUILD_NOW.sh  DEBUG_STEPS.md  Dockerfile  ENHANCED_DIFF_FEATURES.md  FULL_RESTART.sh  README.md  START_HERE.md  build-and-run.sh  build-client.sh  build.sh  clear-cache.sh  debug-api.js  debug-frontend.html  docker-compose.yml  ecosystem.config.js  fix-cache.sh  install-missing.sh  package-lock.json  package.json  restart-server.sh  start-diff-viewer.sh  start.sh  test-advanced-diff.js  test-api.js  test-diff-engines.js  test-rich-text.js
docs/: COMMANDER_CLAUDE.md  MACOS_RELEASE_INSTALL_NOTES.md  MACOS_SIGNING_RELEASE_CHECKLIST.md  ONBOARDING_REQUIREMENTS_AND_INTEGRATIONS_AUDIT.md  PUBLIC_RELEASE_AUDIT_2026-02-06.md  REVIEW_SYSTEM_DOCUMENTATION.md  creating-projects.md  discord-bot-architecture-risk-assessment.md
plugins/: README.md
scripts/: README.md  audit-history-authors.js  audit-ui-colors.js  check-command-surface-drift.js  check-history-rewrite-readiness.js  create-project.js  create-public-snapshot-repo.js  dev-server.js  ensure-pty.js  execute-history-rewrite.js  finalize-history-rewrite-mailmap.js  generate-history-rewrite-workkit.js  generate-release-readiness-report.js  install-startup.sh  migrate-to-workspaces.js  orchestrator-startup.sh  pick-free-port.js  preview-site.js  public-release-audit.js  record-tasks-demo.js  render-legal-pages.js  run-e2e-diff-viewer.js  run-e2e-safe.js  run-history-rewrite-prep.js  run-orchestrator.sh  scan-markdown-remaining.js  (+3 more)
server/: agentManager.js  (+100 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bootstrap/: index.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_watcher.rs  lib.rs  main.rs  terminal.rs
src-tauri/windows/: hooks.nsh
(+454 files in other folders)
