[package]
name = "claude-orchestrator"
version = "0.1.1-rc.1"
description = "A Tauri App for Agent Workspace"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "claude_orchestrator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }
notify = "6.0"
open = "5.0"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
