[package]
name = "agent-workspace"
version = "0.1.5-2"
description = "A Tauri App for Agent Workspace"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "agent_workspace_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
futures = "0.3"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }
notify = "6.0"
open = "5.0"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Fast local builds: `npm run tauri:build:fast` or `cargo tauri build --profile fast`
# Trades binary size for ~3-5x faster compilation (no LTO, parallel codegen, incremental).
[profile.fast]
inherits = "release"
codegen-units = 256
lto = false
opt-level = 1
strip = false
incremental = true
